Lagre versjon av beregningsregler som er brukt (#4374)